06-cascade-fix my solution. completed 5.3.24 this is my version of 06-cascade-fix. after reading the next seciton i descovered i gad used the wrong cymbol for class and never realised that musltiple classes will take presedents over single class's. all tested and working.

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -28,14 +28,14 @@ body {
   border: solid black 1px;
 }
 
-#text.#child{
+.text .child{
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
 }
 
-#text {
+.text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
+  font-size: 15px;
   font-weight: 100;
 }
